--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -8,7 +8,7 @@
     tools:context=".AddAlarmActivity">
 
     <TextView
-        android:id="@+id/textview_time_selector"
+        android:id="@+id/tv_time_selector"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:text="AM  6 : 00"
@@ -18,11 +18,12 @@
         app:layout_constraintRight_toRightOf="parent"/>
 
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/sv_alarm_creator"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_time_selector">
+        app:layout_constraintTop_toBottomOf="@id/tv_time_selector"
+        app:layout_constraintBottom_toTopOf="@+id/lout_cancel_create">
 
         <LinearLayout
             android:layout_width="match_parent"
