--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -11,8 +11,9 @@
         android:id="@+id/iv_login_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/lout_id_password"
         android:layout_width="match_parent"
-        android:layout_height="400dp"/>
+        android:layout_height="0dp"/>
 
     <LinearLayout
         android:id="@+id/lout_id_password"
@@ -62,6 +63,7 @@
         android:id="@+id/lout_signIn_signUp"
         app:layout_constraintTop_toBottomOf="@id/lout_remember_forget"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
