--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -8,6 +8,9 @@
     tools:context=".StopWatchActivity">
 
     <LinearLayout
+        android:id="@+id/lout_option"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -23,20 +26,24 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"/>
+
 
 
     <TextView
-        android:id="@+id/tv_stop_watch"
+        app:layout_constraintTop_toBottomOf="@id/lout_option"
+        app:layout_constraintBottom_toTopOf="@id/lout_record_start"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/tv_stop_watch_viewer"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="0dp"
         android:gravity="center"
         android:text="00:00:00"
         android:textSize="40dp"/>
 
     <LinearLayout
+        android:id="@+id/lout_record_start"
+        app:layout_constraintBottom_toTopOf="@+id/lout_menuBar"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -61,6 +68,8 @@
 
 
     <LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/lout_menuBar"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -98,4 +107,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
