--- a/app/src/main/res/layout/activity_timer_acticity.xml
+++ b/app/src/main/res/layout/activity_timer_acticity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,9 @@
     tools:context=".TimerActivity">
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/lout_add_option"
         android:gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -33,14 +36,21 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tv_timer_viewer"
+        app:layout_constraintTop_toBottomOf="@+id/lout_add_option"
+        app:layout_constraintBottom_toTopOf="@id/lout_start"
+        app:layout_constraintRight_toRightOf="parent"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
         android:text="00:00:00"
         android:textSize="40dp"/>
 
 
     <LinearLayout
+        android:id="@+id/lout_start"
+        app:layout_constraintBottom_toTopOf="@+id/lout_menuBar"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:gravity="center">
@@ -54,6 +64,8 @@
 
 
     <LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/lout_menuBar"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -91,4 +103,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
