--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,36 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFFCFF"
     tools:context=".LogInActivity">
 
     <ImageView
-        android:src="@mipmap/ic_launcher_round"
+
+        android:src="@drawable/ic_myalarm"
         android:id="@+id/iv_login_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/lout_id_password"
-        android:layout_width="match_parent"
+        app:layout_constraintWidth_percent="0.75"
+        android:layout_width="0dp"
         android:layout_height="0dp"/>
 
     <LinearLayout
         android:id="@+id/lout_id_password"
         app:layout_constraintTop_toBottomOf="@id/iv_login_image"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.75"
         android:orientation="vertical">
 
         <EditText
+            android:paddingLeft="15dp"
+            android:background="@drawable/edittext_gray"
+            android:layout_margin="10dp"
             android:id="@+id/et_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Input Id or Email"/>
+            android:hint="아이디"
+            android:minHeight="48dp"
+            android:textColorHint="#6E6E6E"/>
 
         <EditText
+            android:paddingLeft="15dp"
+            android:background="@drawable/edittext_gray"
+            android:layout_margin="10dp"
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Input Password"/>
+            android:hint="비밀번호"
+            android:minHeight="48dp"
+            android:textColorHint="#6E6E6E"/>
 
     </LinearLayout>
 
@@ -42,20 +58,22 @@
         app:layout_constraintTop_toBottomOf="@id/lout_id_password"
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.75">
 
         <Button
-            android:text="Remember?"
-            android:layout_weight="1"
+            android:background="#00000000"
+            android:textColor="#373737"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:paddingLeft="15dp"
+            android:text="아이디 저장"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <Button
-            android:text="Forget Id?"
-            android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+
 
     </LinearLayout>
 
@@ -63,22 +81,66 @@
         android:id="@+id/lout_signIn_signUp"
         app:layout_constraintTop_toBottomOf="@id/lout_remember_forget"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.75">
 
         <Button
+            android:textColor="#FFFFFF"
+            android:background="@drawable/btn_blue"
+            android:layout_margin="10dp"
             android:id="@+id/btn_signIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In"/>
+            android:text="LOGIN"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/lout_signIn_forgetId_forgetPassword"
+        app:layout_constraintTop_toBottomOf="@id/lout_signIn_signUp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintWidth_percent="0.75">
 
         <Button
-            android:id="@+id/btn_signUp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sign Up"/>
+            android:background="#00000000"
+            android:textColor="#373737"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="회원가입"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:background="#00000000"
+            android:textColor="#373737"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="아이디 찾기"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:background="#00000000"
+            android:textColor="#373737"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="비밀번호 찾기"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
