--- a/app/src/main/res/drawable/btn_blue.xml
+++ b/app/src/main/res/drawable/btn_blue.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 버튼 색깔 -->
-    <solid android:color="#92B4EC" /> <!-- 네 귀퉁이? 모양 -->
+    <solid android:color="#438AFF" /> <!-- 네 귀퉁이? 모양 -->
     <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp"
