--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EFFCFF"
+    android:background="#FFFFFF"
     tools:context=".LogInActivity">
 
     <ImageView
@@ -64,6 +64,7 @@
         app:layout_constraintWidth_percent="0.75">
 
         <Button
+            android:id="@+id/btn_rememberId"
             android:background="#00000000"
             android:textColor="#373737"
             android:layout_marginLeft="10dp"
@@ -110,6 +111,7 @@
         app:layout_constraintWidth_percent="0.75">
 
         <Button
+            android:id="@+id/btn_signUp"
             android:background="#00000000"
             android:textColor="#373737"
             android:layout_marginLeft="10dp"
@@ -120,6 +122,7 @@
             android:layout_height="wrap_content"/>
 
         <Button
+            android:id="@+id/btn_forgetId"
             android:background="#00000000"
             android:textColor="#373737"
             android:layout_marginLeft="10dp"
@@ -130,6 +133,7 @@
             android:layout_height="wrap_content"/>
 
         <Button
+            android:id="@+id/btn_forgetPassword"
             android:background="#00000000"
             android:textColor="#373737"
             android:layout_marginLeft="10dp"
