--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -31,14 +31,27 @@
 
     <TextView
         app:layout_constraintTop_toBottomOf="@id/lout_option"
-        app:layout_constraintBottom_toTopOf="@id/lout_record_start"
+        app:layout_constraintBottom_toTopOf="@id/tv_record_viewer"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/tv_stopwatch_viewer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
         android:text="00:00:00"
-        android:textSize="40dp"/>
+        android:textSize="56dp"
+        android:layout_marginBottom="40dp"/>
+
+    <TextView
+        android:textSize="24dp"
+        android:layout_marginTop="-80dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
+        app:layout_constraintBottom_toTopOf="@id/lout_record_start"
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/tv_record_viewer"
+        app:layout_constraintHeight_percent="0.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center_horizontal" />
 
     <LinearLayout
         android:id="@+id/lout_record_start"
@@ -48,10 +61,10 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/btn_stopWatch_record"
+            android:id="@+id/btn_record_init"
             android:textSize="20dp"
-            android:layout_margin="20dp"
-            android:background="#00FFFFFF"
+            android:layout_margin="28dp"
+            android:background="@drawable/btn_gray"
             android:textColor="#000000"
             android:layout_weight="1"
             android:layout_width="80dp"
@@ -59,11 +72,11 @@
             android:text="RECORD"/>
 
         <Button
-            android:id="@+id/btn_stopWatch_start"
+            android:id="@+id/btn_start_pause_resume"
             android:textSize="20dp"
-            android:layout_margin="20dp"
-            android:background="#00FFFFFF"
-            android:textColor="#000000"
+            android:layout_margin="28dp"
+            android:background="@drawable/btn_blue"
+            android:textColor="#FFFFFF"
             android:layout_weight="1"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
