--- a/app/src/main/res/layout/activity_stop_watch.xml
+++ b/app/src/main/res/layout/activity_stop_watch.xml
@@ -49,7 +49,7 @@
         android:textSize="24dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
-        app:layout_constraintBottom_toTopOf="@id/lout_record_viewer_bottom"
+        app:layout_constraintBottom_toTopOf="@id/sv_record_viewer_bottom"
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/lout_record_viewer_top"
         app:layout_constraintHeight_percent="0.05"
@@ -97,7 +97,8 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
+        android:scrollbars="none"
         android:background="#00FFFFFF"
         android:layout_marginRight="52dp"
         android:layout_marginLeft="52dp"
@@ -106,36 +107,63 @@
         app:layout_constraintTop_toBottomOf="@id/tv_stopwatch_viewer"
         app:layout_constraintBottom_toTopOf="@id/lout_record_start"
         app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/lout_record_viewer_bottom"
+        android:id="@+id/sv_record_viewer_bottom"
         app:layout_constraintHeight_percent="0.45"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="2"
-            android:id="@+id/lout_interval"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
+            android:layout_marginTop="24dp"
+            android:id="@+id/lout_record_viewer_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="2"
+                android:id="@+id/lout_interval"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:textSize="22dp"
+                    android:gravity="center"
+                    android:id="@+id/tv_interval"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="3"
+                android:id="@+id/lout_split_record"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:textSize="22dp"
+                    android:gravity="center"
+                    android:id="@+id/tv_interval_record"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="3"
+                android:id="@+id/lout_course_record"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:textSize="22dp"
+                    android:gravity="center"
+                    android:id="@+id/tv_course_record"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
         </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="3"
-            android:id="@+id/lout_split_record"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-        </LinearLayout>
+    </ScrollView>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="3"
-            android:id="@+id/lout_course_record"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-        </LinearLayout>
-
-    </LinearLayout>
 
 
     <LinearLayout
